build client-side JS to gather Form input and create a new Friend Object from results using a constructor

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -52,7 +52,7 @@
         <div class="col-xs-10 col-sm-8 col-md-8 col-md-offset-2 col-lg-8 col-xs-offset-1 col-sm-offset-2 text-center questions">
           <div class="form-group">
             <label id="inputNameLabel" for="exampleInputEmail1">FIRST & LAST NAME</label>
-            <input type="text" class="form-control text-center" id="inputName" placeholder="enter your first and last name" name="select11">
+            <input type="text" class="form-control text-center" id="q1" placeholder="enter your first and last name" name="select11">
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <div class="col-xs-10 col-sm-8 col-md-8 col-md-offset-2 col-lg-8 col-xs-offset-1  col-sm-offset-2 text-center questions">
           <div class="form-group">
             <label id="inputPhotoLabel" for="exampleInputEmail1">PHOTO</label>
-            <input type="url" class="form-control text-center" id="inputPhoto" placeholder="enter a URL that links to a current photo of your visage" name="select12">
+            <input type="url" class="form-control text-center inputPhoto" id="q2" placeholder="enter a URL that links to a current photo of your visage" name="select12">
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 1</b></h2>
           <h3 class="answer">You prefer a quiet night at home to a night out on the town</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q1" name="select1">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q3" name="select1">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -87,7 +87,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 2</b></h2>
           <h3 class="answer">Loud people are vexatious to the spirit</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q2" name="select2">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q4" name="select2">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -103,7 +103,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 3</b></h2>
           <h3 class="answer">You rarely do something just out of sheer curiosity.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q3" name="select3">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q5" name="select3">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -119,7 +119,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 4</b></h2>
           <h3 class="answer">People can rarely upset you.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q4" name="select4">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q6" name="select4">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -135,7 +135,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 5</b></h2>
           <h3 class="answer">It is often difficult for you to relate to other people’s feelings.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q5" name="select5">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q7" name="select5">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -151,7 +151,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 6</b></h2>
           <h3 class="answer">In a discussion, truth should be more important than people’s sensitivities.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q6" name="select6">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q8" name="select6">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -167,7 +167,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 7</b></h2>
           <h3 class="answer">Everyone’s views should be respected regardless of whether they are supported by facts or not.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q7" name="select7">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q9" name="select7">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -183,7 +183,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 8</b></h2>
           <h3 class="answer">Generally speaking, you rely more on your experience than your imagination.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q8" name="select8">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q10" name="select8">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -199,7 +199,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 9</b></h2>
           <h3 class="answer">You feel more energetic after spending time with a group of people.</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q9" name="select9">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q11" name="select9">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -215,7 +215,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 text-center questions">
           <h2 class="question"><b>Question 10</b></h2>
           <h3 class="answer">You are more comfortable with intermittent moments of silence when in the company of others rather than consistent conversation</h3>
-          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q10" name="select10">
+          <select data-placeholder="SELECT A RESPONSE" class="chosen-select optionText" style="display: none" id="q12" name="select10">
             <option value="" class="optionText"></option>
             <option value="1" class="optionText">1 (Strongly Disagree)</option>
             <option value="2" class="optionText">2</option>
@@ -225,7 +225,8 @@
           </select>
         </div> 
       </div>
-      <div class="errorMessage text-center animated pulse infinite"><span></span></div>   <!-- hidden placeholder div for jQuery Validate error message -->
+      <!-- hidden placeholder div for jQuery Validate error message -->
+      <div class="errorMessage text-center animated pulse infinite"><span></span></div>   
       <br>
       <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 col-xs-offset-3 col-sm-offset-4 col-md-offset-4 col-lg-offset-4">
         <button type="submit" class="btn btn-primary btn-lg btn-block" id="surveySubmit"><i class="fa fa-check-circle" aria-hidden="true"></i> SUBMIT</button>
@@ -241,81 +242,101 @@
 <script src="assets/js/chosen.jquery.js"></script>
 <script src="assets/js/jquery.validate.js"></script>
 <script>
-  $('#inputPhoto').on("click", function(){
-    var addToURL = "http://";
-    document.getElementById('inputPhoto').value = 'http://';
-  });
-    $(".chosen-select").chosen({ width: "210px", height: "204px"});   // initialize the jQuery Chosen Plugin
-    $.validator.setDefaults({                                         // set some defaults for jQuery Validate Plugin
-      ignore: ":hidden:not(.chosen-select), .chosen-search-input", 
-      debug: true,
-      success: "valid",
-      disable_search: true,
-      rules: {
-          select1: {
-          required: true
-          },
-          select2: {
-          required: true
-          }
-          ,select3: {
-          required: true
-          }
-          ,select4: {
-          required: true
-          }
-          ,select5: {
-          required: true
-          }
-          ,select6: {
-          required: true
-          }
-          ,select7: {
-          required: true
-          }
-          ,select8: {
-          required: true
-          }
-          ,select9: {
-          required: true
-          }
-          ,select10: {
-          required: true
-          },
-          select11: {
-          required: true
-          },
-          select12: {
-          required: true
-          }
-        }
-    });  
-    $('#surveyForm').validate(                                        // initialize jQuery Validate Plugin
-    {
-      invalidHandler: function(event, validator) {
-        var errors = validator.numberOfInvalids();
-        console.log(errors);
-        if (errors) {
-          var message;
-          if (errors === 1){
-            message = 'YOU FAILED TO ANSWER ONE QUESTION';
-          }
-          else if (errors > 1){
-            message = 'YOU FAILED TO ANSWER ' + errors + ' QUESTIONS';
-          }
-          $("div.errorMessage span").html(message).css("color", "red");
-          $("div.errorMessage").show();
-        } 
-        else {
-          $("div.errorMessage").hide();
-        }
-      },
 
-      submitHandler: function(form){
-        console.log("submitted");
-        //  collect values from FORM and push into Array/Object
+  // dynamically add 'http://' to URL input field when field is active, therefore the original placeholder text can be displayed.  If a 'value='http://' was simpy add to the HTML markup for that <input> element, the placeholder attribute would be overridden by it.
+  $('.inputPhoto').on("focus", function(){
+    var addToURL = "http://";
+    document.getElementById('q2').value = 'http://';  
+  });
+
+  // FORM Configuration and Validation
+  $(".chosen-select").chosen({ width: "210px", height: "204px", disable_search_threshold: 10});   // initialize the jQuery Chosen Plugin
+  $.validator.setDefaults({                                         // set some defaults for jQuery Validate Plugin
+    ignore: ":hidden:not(.chosen-select), .chosen-search-input", 
+    debug: true,
+    success: "valid",
+    disable_search: true,
+    rules: {
+        select1: {
+        required: true
+        },
+        select2: {
+        required: true
+        }
+        ,select3: {
+        required: true
+        }
+        ,select4: {
+        required: true
+        }
+        ,select5: {
+        required: true
+        }
+        ,select6: {
+        required: true
+        }
+        ,select7: {
+        required: true
+        }
+        ,select8: {
+        required: true
+        }
+        ,select9: {
+        required: true
+        }
+        ,select10: {
+        required: true
+        },
+        select11: {
+        required: true
+        },
+        select12: {
+        required: true
+        }
       }
-    });
+  });  
+  $('#surveyForm').validate(                                        // initialize jQuery Validate Plugin
+  {
+    invalidHandler: function(event, validator) {
+      var errors = validator.numberOfInvalids();
+      console.log(errors);
+      if (errors) {
+        var message;
+        if (errors === 1){
+          message = 'YOU FAILED TO ANSWER ONE QUESTION';
+        }
+        else if (errors > 1){
+          message = 'YOU FAILED TO ANSWER ' + errors + ' QUESTIONS';
+        }
+        $("div.errorMessage span").html(message).css("color", "red");
+        $("div.errorMessage").show();
+      } 
+      else {
+        $("div.errorMessage").hide();
+      }
+    },
+    // When Form has been fully validated.....
+    submitHandler: function(form){
+      var name = $('#q1').val().trim();
+      var photo = $('#q2').val().trim();
+      var scores = [];
+      for (var i = 3; i < 13; i++){
+        var response = $('#q'+ i).val();
+        scores.push(response);
+      }
+      console.log(name);
+      console.log(photo);
+      console.log(scores);
+      var newFriend = new Friend(name, photo, scores);
+      console.log(newFriend);
+    }
+  });
+
+  function Friend(name, photo, scores){
+    this.name = name;
+    this.photo = photo;
+    this.scores = scores;
+  }
 </script>
 <!-- Custom template scripts -->
 <script src="assets/js/magister.js"></script>
