--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,7 +27,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
 </head>
 
-<body class="theme-invert">
+<body class="theme-invert animated fadeIn bodyFade">
 
 <nav class="mainmenu">
 	<div class="container">
@@ -36,6 +36,7 @@
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 				<li><a href="#head" class="active">HOME</a></li>
+				<li><a href="/api/friends">FRIENDS</a></li>
 				<li><a href="#about">ABOUT</a></li>
 				<li><a href="#contact">CONTACT</a></li>
 			</ul>
@@ -80,11 +81,11 @@
 				<h5><strong>WHY FRIEND FINDER?<br></strong></h5>
 				<p>Crushing solitude and your inveterate social ineptitude joined forces and petitioned the web development gods to design a digital scapegoat unto which all blame and shame can be directed as you drift ever deeper into the desert of lonesomeness.</p>    
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<h5><strong>WILL IT WORK?<br></strong></h5>    
-				<p>Yes, the application is currently fully functional.</p>    
-				<h5><strong>UNRELATED:<br></strong></h5>    
-				<p><a href="http://be.net/pozhilov9409">Behance</a> / <a href="https://twitter.com/serggg">Twitter</a> / <a href="http://linkedin.com/pozhilov">LinkedIn</a> / <a href="https://www.facebook.com/pozhilov">Facebook</a></p>
+				<p>Yes, the application is in good health and fully operational.</p> 
+				<h5><strong>WILL IT LAST?<br></strong></h5>    
+				<p>It takes a long time to grown an old friend.</p>  
 			</div>
 		</div>
 	</div>
