--- a/app/public/home.html
+++ b/app/public/home.html
@@ -85,7 +85,7 @@
 				<h5><strong>WILL IT WORK?<br></strong></h5>    
 				<p>Yes, the application is in good health and fully operational.</p> 
 				<h5><strong>WILL IT LAST?<br></strong></h5>    
-				<p>It takes a long time to grown an old friend.</p>  
+				<p>It takes a long time to grow an old friend.</p>  
 			</div>
 		</div>
 	</div>
