added a prettified version of the RAW friends JSON data using Handlebars

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -27,9 +27,10 @@
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 				<li><a href="#head" class="active">HOME</a></li>
-				<li><a href="/api/friends">FRIENDS</a></li>
 				<li><a href="#about">ABOUT</a></li>
 				<li><a href="#contact">CONTACT</a></li>
+				<li><a href="/api/friends">FRIENDS JSON</a></li>
+				<li><a href="/api/potentialfriends">POTENTIAL FRIENDS</a></li>
 			</ul>
 		</div>
 	</div>
