--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,7 +8,7 @@
 	<title>FriendFinder</title>
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">	
 	<!-- Bootstrap itself -->
-	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<!-- Custom styles -->
   <link rel="stylesheet" href="assets/css/magister.css"> 
   <!-- Animate.css -->
@@ -16,8 +16,8 @@
   <!-- Font Awesome CDN-->
   <script src="https://use.fontawesome.com/c38831e163.js"></script>
 	<!-- Fonts -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
 </head>
 <body class="theme-invert animated fadeIn bodyFade">
 <nav class="mainmenu">
@@ -97,8 +97,8 @@
 	</div>
 </section>
 <!-- Load js libs only when the page is loaded. -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="assets/js/modernizr.custom.72241.js"></script>
 <!-- Custom template scripts -->
 <script src="assets/js/magister.js"></script>
