--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,7 +8,7 @@
 	<title>FriendFinder</title>
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	<!-- Bootstrap itself -->
-  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <!-- Vex Modals -->
   <link rel="stylesheet" href="/assets/css/vex.css" />
   <link rel="stylesheet" href="/assets/css/vex-theme-flat-attack.css" />
@@ -21,8 +21,8 @@
   <!-- Font Awesome CDN-->
   <script src="https://use.fontawesome.com/c38831e163.js"></script>
 	<!-- Fonts -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
 </head>
 <body class="theme-invert" style="background:black url(../images/body6.jpg)">
 <nav class="mainmenu" style="background-color: black">
@@ -234,8 +234,8 @@
 </section>
 <!-- Load js libs only when the page is loaded. -->
 <script src="/assets/js/vex.combined.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="assets/js/modernizr.custom.72241.js"></script>
 <script src="assets/js/chosen.jquery.js"></script>
 <script src="assets/js/jquery.validate.js"></script>
