updated contact page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -84,11 +84,13 @@
 			<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-log-offset-1 text-center">
 				<p class="lead">INTERESTED IN LEARNING MORE OR HAVE A QUESTION ?</p>
 				<p>Please feel free to reach out via email</p>
-				<p><a href="brianpatrickhummel@mac.com"><b>brianpatrickhummel@mac.com</b><br><br></a></p>
+				<p><a href="mailto:brianpatrickhummel@mac.com"><b>brianpatrickhummel@mac.com</b><br><br></a></p>
+				<p>Visit me at:</p>
+				<p><a href="http://www.brianpatrickhummel.com"><b>www.brianpatrickhummel.com</b><br></a></p>
 				<ul class="list-inline list-social">
-					<li><a href="hhttps://github.com/brianpatrickhummel" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-github fa-fw fa-inverse"></i> Github</a></li>
-					<li><a href="https://twitter.com/BrianPHummel" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-twitter fa-fw fa-inverse"></i> Twitter</a></li>
-					<li><a href="https://www.linkedin.com/in/brianpatrickhummel/" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-linkedin fa-fw fa-inverse"></i> LinkedIn</a></li>
+					<li><a href="https://github.com/brianpatrickhummel" target="_blank" class="btn btn-link" style="color: rgba(255,255,255,0.5); font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-github fa-fw fa-2x fa-inverse hovFade"></i> </a></li>
+					<li><a href="https://stackoverflow.com/users/7560339/brian-patrick-hummel" target="_blank" class="btn btn-link" style="color: rgba(255,255,255,0.5); font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-stack-overflow fa-fw fa-2x fa-inverse hovFade"></i>  </a></li>
+					<li><a href="https://www.linkedin.com/in/brianpatrickhummel/" target="_blank" class="btn btn-link" style="color: rgba(255,255,255,0.5); font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-linkedin fa-fw fa-2x fa-inverse hovFade"></i>  </a></li>
 				</ul>
 			</div>
 		</div>
