updated contact page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -86,7 +86,7 @@
 				<p>Please feel free to reach out via email</p>
 				<p><a href="mailto:brianpatrickhummel@mac.com"><b>brianpatrickhummel@mac.com</b><br><br></a></p>
 				<p>Visit me at:</p>
-				<p><a href="http://www.brianpatrickhummel.com"><b>www.brianpatrickhummel.com</b><br></a></p>
+				<p><a href="http://www.brianpatrickhummel.com"><b>www.brianpatrickhummel.com</b><br><br></a></p>
 				<ul class="list-inline list-social">
 					<li><a href="https://github.com/brianpatrickhummel" target="_blank" class="btn btn-link" style="color: rgba(255,255,255,0.5); font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-github fa-fw fa-2x fa-inverse hovFade"></i> </a></li>
 					<li><a href="https://stackoverflow.com/users/7560339/brian-patrick-hummel" target="_blank" class="btn btn-link" style="color: rgba(255,255,255,0.5); font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-stack-overflow fa-fw fa-2x fa-inverse hovFade"></i>  </a></li>
